--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,6 @@ jobs:
       run: |
         ls
         cd rotative-militante
-        npm ci
+        npm install
         npm run build --if-present
         npm test
