--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,10 +21,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - name: Install, Build, and Test
+    - name: Change Directory and Install, Build, and Test
       run: |
         ls
         cd rotative-militante
-        npm install
+        npm ci
         npm run build --if-present
         npm test
